# MTX

./: .env  cleaner_single_page.ipynb  graph.py  main.py  pyproject.toml  scrapping.py  semantic.py
data/: extracted_urls.txt
notebooks/: base_study_with_graph.ipynb  cleaner_single_page.ipynb  extracted_urls.txt  initial_study.ipynb  scrapping.ipynb
